<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"DNA Image "</string>
    <string name="action_settings">Settings</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="key1">Enter KEY 1</string>
    <string name="key2">Enter KEY 2</string>
    <string name="image">Import Image</string>
    <string name="enc">Encrypt/Decrypt</string>
    <string name="cap">Capture Image</string>
    <string name="enc1"/>

</resources>