<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Start" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true" />
      
    <EditText
        android:id="@+id/ET1"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/key1"
        android:inputType="number"
        android:textSize="30sp" 
        android:maxLength="5"/>

    <EditText
        android:id="@+id/ET2"
        android:layout_width="fill_parent"
        android:layout_height="60sp"
        android:layout_alignLeft="@+id/ET1"
        android:layout_below="@+id/ET1"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/key2"
        android:inputType="number"
        android:textSize="30sp" 
        android:maxLength="5">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/i1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/ET2"
        android:layout_below="@+id/ET2"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/B1"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_alignRight="@+id/ET2"
        android:layout_alignTop="@+id/i1"
        android:text="@string/image"
        android:textSize="20sp" />

    <Button
        android:id="@+id/B2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TV2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/enc"
        android:textSize="30sp" />

    <Button
        android:id="@+id/B3"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_alignBottom="@+id/i1"
        android:layout_alignLeft="@+id/B1"
        android:text="@string/cap"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TV2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_above="@+id/B2"
        android:layout_alignRight="@+id/B3"
        android:text="@string/enc1" />

</RelativeLayout>